<resources>
    <string name="app_name">Github User</string>
    <string name="splash_description">Github Profile App By Raja Allifin</string>
    <string name="username">Username</string>
    <string name="nama_user">Nama User</string>
    <string name="_200">200</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="search_hint">Search Username</string>
    <string name="followers_tab">Followers</string>
    <string name="following_tab">Following</string>
    <string name="_0">0</string>
</resources>