<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/darkness"
            android:padding="15dp">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/vec_back"
                android:backgroundTint="@color/white"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:fontFamily="@font/poppinssembold"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="65dp"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:src="@tools:sample/avatars"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivUser"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinssembold"
                android:gravity="center"
                android:text="@string/nama_user"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/tvUsernameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:text="@string/username"
                android:gravity="center"
                android:fontFamily="@font/poppinsreg"
             />

            <TextView
                android:id="@+id/tvFollowersValue"
                android:layout_width="60dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUsernameValue"
                android:text="@string/_200"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="55dp"/>

            <TextView
                android:id="@+id/tvFollowingValue"
                android:layout_width="60dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUsernameValue"
                android:text="@string/_200"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tvRepositoryValue"
                android:layout_width="60dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUsernameValue"
                android:text="@string/_200"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="55dp"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/tvViewFollowers"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFollowersValue"
                android:text="@string/followers"
                android:layout_marginStart="55dp"/>

            <TextView
                android:id="@+id/tvViewFollowing"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFollowersValue"
                android:text="@string/following"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tvViewRepository"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFollowersValue"
                android:text="@string/repository"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="48dp"/>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabFollow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvViewFollowers"
                android:layout_marginTop="10dp"
                app:tabTextColor="@color/white"
                android:background="@color/darkness" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@id/tabFollow"
                android:layout_centerHorizontal="true"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyle"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>



        </RelativeLayout>

    </LinearLayout>

</ScrollView>